--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </p>
     </div> 
     <div class="Under">
-      <form action="https://formsubmit.co/farbod.p1390@gmail.com" method="POST">
+      <form action="https://formsubmit.co/f8d66caad52bf78b7d06e80178bb82f5" method="POST">
         <textarea name="message" cols="80" rows="15" placeholder="پیامتان"></textarea><br /><br />
         <input type="text" name="name" placeholder="نام و نام خانوادگی" /><br /> <br />
         <input type="email" name="email" placeholder="ایمیل" /><br /> <br />
