--- a/Methods of optimizing water consumption in home.html
+++ b/Methods of optimizing water consumption in home.html
@@ -144,7 +144,17 @@
             </ul>
         </p>
     </div> 
-    <div class="Under"></div>
+    <div class="Under">
+        <h1>اعمال نظر:</h1>
+      <form action="https://formsubmit.co/f8d66caad52bf78b7d06e80178bb82f5" method="POST">
+        <textarea name="message" cols="80" rows="15" placeholder="پیامتان"></textarea><br /><br />
+        <input type="text" name="name" placeholder="نام و نام خانوادگی" /><br /> <br />
+        <input type="email" name="email" placeholder="ایمیل" /><br /> <br />
+        <input type="hidden" name="_captcha" value="false">
+        <input type="hidden" name="_next" value="thanks.html">
+        <button type="submit">ارسال</button>
+      </form>
+    </div>
     </div>
     <br />
     <br />
