--- a/Methods of optimizing water consumption in home.html
+++ b/Methods of optimizing water consumption in home.html
@@ -9,6 +9,7 @@
   <body>
     <br /><br /><div class="div_body">
     <div class="Top Subject "><h1><b>بهینه سازی مصرف آب در خانه</b></h1></div>
+    <div class="Logo"><img src="Files/Image/ico original.png" alt="Website Logo" class="Logo-img"><p class="Logo-txt">نجات آب</p></div>
     <div class="Right-Page_Methods-of-optimizing-water-consumption-in-home">
         <pre>  لیست موضوعات:  </pre>
         <br />
