--- a/water shortage.html
+++ b/water shortage.html
@@ -9,6 +9,7 @@
   <body>
     <br /><br /><div class="div_body">
         <div class="Top Subject "><h1><b>کمبود آب</b></h1></div>
+        <div class="Logo"><img src="Files/Image/ico original.png" alt="Website Logo" class="Logo-img"><p class="Logo-txt">نجات آب</p></div>
         <div class="Right-Page_water-shortage">
             <pre>  لیست موضوعات:  </pre>
             <br />
