--- a/index.html
+++ b/index.html
@@ -10,62 +10,19 @@
     <br /><br /><div class="div_body">
     <div class="Top Subject "><h1><b>نجات آب</b></h1></div>
     <div class="Logo"><img src="Files/Image/ico original.png" alt="Website Logo" class="Logo-img"><p class="Logo-txt">نجات آب</p></div>
-    <div class="Right-Page_index">
-      <pre>  لیست موضوعات:  </pre>
-        <br />
-        <ul dir="rtl" class="Menu">
-          <li>
-            <a target="_blank" href="Iran.html">ایران</a><br />
-          </li>
-          <li>
-            <a target="_blank" href="water shortage.html">کمبود آب</a><br />
-          </li>
-          <li>
-            <a target="_blank" href="Iran's low water cities.html">استان های کم آب ایران</a><br />
-          </li>
-          <li>
-            <a target="_blank" href="Low water countries.html">کشور های کم آب جهان</a><br />
-          </li>
-          <li>
-            <a target="_blank" href="Landlocked country.html">کشور محصور در خشکی</a><br />
-          </li>
-          <li>
-            <a target="_blank" href="salt and fresh waters of the planet.html">آب های شور و شیرین کره زمین</a><br />
-          </li>  
-          <li>
-            <a target="_blank" href="Methods of optimizing water consumption in home.html">بهینه سازی مصرف آب در خانه</a>
-          </li>
-          <li>
-            <a target="_blank" href="Methods of optimizing water consumption in agriculture.html">بهینه سازی مصرف آب در کشاورزی</a>
-          </li>
-      </ul>
-    </div>
+    <div class="Right-Page_index"></div>
     <div class="Left-Page_index"></div>
     <div class="Mid-Page_index">
       <br />
       <br />
       <p>
-        سلام.
-        تاحالا شده که در مورد مصرف این حجم از آب یک کشور یا شهر فکر یا تحقیق کنید؟
+        این دامنه به فروش میرسد
         <br />
-        اگر به دنبال جایی برای بالا بردن سطح دانش خود در مورد مصرف آب، کشور های محصور در خشکی، انواع مصرف آب و... هستید به جای خوبی
-        <br />
-        سرزدید.
-        <br />
-        می توانید موضوع مورد تحقیق خود را از فهرست سمت راست انتخاب کنید.
+        برای خرید به ایمیل زیر پیام بدهید:
+        farbod.p1390@gmail.com
       </p>
     </div> 
-    <div class="Under">
-      <h1>اعمال نظر:</h1>
-      <form action="https://formsubmit.co/f8d66caad52bf78b7d06e80178bb82f5" method="POST">
-        <textarea name="message" cols="80" rows="15" placeholder="پیامتان"></textarea><br /><br />
-        <input type="text" name="name" placeholder="نام و نام خانوادگی" /><br /> <br />
-        <input type="email" name="email" placeholder="ایمیل" /><br /> <br />
-        <input type="hidden" name="_captcha" value="false">
-        <input type="hidden" name="_next" value="thanks.html">
-        <button type="submit">ارسال</button>
-      </form>
-    </div>
+    <div class="Under"></div>
     </div>
     <br />
     <br />
